--- a/form1.html
+++ b/form1.html
@@ -42,7 +42,7 @@
 <body>
 
   <div class="rows row1">
-               <h1><b>VIEW ACCIDENT REGISTRY</b></h1>
+               <h1><b>ACCIDENT REGISTRY</b></h1>
            </div>
 
 
