--- a/form.html
+++ b/form.html
@@ -127,7 +127,14 @@
                   <input type="text" class="form-control date" id="repofname" placeholder="Enter Reporting Officer Name">
                 </div>
 
-              
+                <div class="form-group">
+                  <label for="img">Upload Image</label>
+                <input id="inp" type='file'>
+                <p id="b64"></p>
+
+                </div>
+              <img id="img" height="150">
+
 
 
 
