--- a/form1.html
+++ b/form1.html
@@ -87,7 +87,7 @@
 
           </tbody>
         </table>
-
+<img id="img" height="150">
                   <button type="submit" class="btn btn-default" id="add1">Confirm</button>
                   <button type="submit" class="btn btn-default"id="add2">Edit</button>
 <br><br><br><br>
